<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.Fragment.home.HomeFragment"
        tools:layout="@layout/fragment_home"
        android:label="@string/title_home"
        />
    <fragment
        android:id="@+id/navigation_message"
        android:name="com.example.myapplication.Fragment.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />
    <fragment
        android:id="@+id/navigation_journey"
        android:name="com.example.myapplication.Fragment.journey.JourneyFragment"
        android:label="@string/title_journey"
        tools:layout="@layout/fragment_journey" />
    <fragment
        android:id="@+id/navigation_my"
        android:name="com.example.myapplication.Fragment.my.MyFragment"
        android:label="@string/title_my"
        tools:layout="@layout/fragment_my" />
</navigation>