<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.my.MyFragment"
    android:layout_marginHorizontal="15dp"
    android:orientation="vertical"
    android:backgroundTint="#E2E2E2">
    <com.example.myapplication.custom.CustomScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/my_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:backgroundTint="@color/white"
                android:orientation="horizontal">
                <ImageView android:id="@+id/my_message_picture"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/circle_shape"/>
                <TextView  android:id="@+id/my_message_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="50dp"
                    android:text="尊敬的用户"
                    app:layout_constraintStart_toEndOf="@id/my_message_picture"
                    android:layout_marginStart="10dp"/>
                <Button android:id="@+id/my_message_logout"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="退出登录"
                    android:textSize="11sp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/teal_200" />
                <TextView android:id="@+id/my_message_fan_number"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    app:layout_constraintEnd_toStartOf="@id/my_message_follower_number"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintBottom_toBottomOf="parent" />
                <TextView android:id="@+id/my_message_follower_number"
                    android:layout_width="40dp"
                    android:layout_height="30dp" app:layout_constraintEnd_toStartOf="@id/my_message_like_number"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <TextView android:id="@+id/my_message_like_number"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--会员点击界面-->
            <LinearLayout android:id="@+id/my_vip"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/my_message"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_edit_normal">
            </LinearLayout>
            <!--游览历史以及收藏-->
            <LinearLayout android:id="@+id/my_message_favor"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/my_vip"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@color/white">
                <TextView android:id="@+id/my_message_favor_article"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/likeHistory"/>
                <TextView android:id="@+id/my_message_record_article"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/recordHistory" />
                <TextView android:id="@+id/my_message_discount_coupon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/discountCoupon"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/my_message_order"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintTop_toBottomOf="@id/my_message_favor"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:background="@color/white">
                <TextView android:id="@+id/my_message_all_order"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="全部订单"
                    android:textColor="@color/black"
                    app:drawableTopCompat="@drawable/ic_all_order"
                    android:gravity="center"
                    android:drawablePadding="0dp"/>
                <TextView android:id="@+id/my_message_unpay"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="待支付"
                    android:textColor="@color/black"
                    app:drawableTopCompat="@drawable/ic_unpay"
                    android:gravity="center"
                    android:drawablePadding="0dp"/>
                <TextView
                    android:id="@+id/my_message_unjourney"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawablePadding="3dp"
                    android:gravity="center"
                    android:text="待出行"
                    android:textColor="@color/black"
                    app:drawableTopCompat="@drawable/ic_unjourney" />
                <TextView android:id="@+id/my_message_uncommend"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="待评价"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:drawablePadding="3dp"
                    app:drawableTopCompat="@drawable/ic_uncommend" />
            </LinearLayout>
            <!--推荐数据-->
            <GridView android:id="@+id/my_message_recommend"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                app:layout_constraintTop_toBottomOf="@id/my_message_order"
                android:layout_marginTop="10dp"
                android:numColumns="2"
                android:horizontalSpacing="10dp"
                android:verticalSpacing="10dp"/>
        </LinearLayout>
    </com.example.myapplication.custom.CustomScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>